--- a/src/assets/scss/helpers/_flex.scss
+++ b/src/assets/scss/helpers/_flex.scss
@@ -1,6 +1,7 @@
 .fluid {
   width: 100%;
 }
+
 .fill-height {
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -13,6 +14,7 @@
   -ms-flex: 1 1 100%;
   flex: 1 1 100%;
 }
+
 .spacer {
   -webkit-box-flex: 1 !important;
   -ms-flex-positive: 1 !important;
@@ -127,12 +129,14 @@
   -ms-flex: 0 1 auto;
   flex: 0 1 auto;
 }
+
 .flex-fixed {
   -webkit-flex: 0 0 auto;
   -moz-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
 }
+
 .flex-1 {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -140,9 +144,19 @@
   -ms-flex: 1;
   flex: 1;
 }
+
+.flex-0-5 {
+  -webkit-box-flex: 0.5;
+  -webkit-flex: 0.5;
+  -moz-flex: 0.5;
+  -ms-flex: 0.5;
+  flex: 0.5;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
+
 .flex-grow {
   flex-grow: 1;
 }
